2000-06-20  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/i386/useldt.h: Include <stdlib.h>.

	* sysdeps/unix/sysv/linux/bits/posix_opt.h: Define _POSIX_BARRIERS.
	* sysdeps/unix/sysv/linux/i386/bits/posix_opt.h: Likewise.

	* Makefile (libpthread-routines): Add barrier.
	(tests): Add ex9.  Add rule to build ex9.
	* Versions: Export barrier functions.
	* barrier.c: New file.
	* Examples/ex9.c: New file.
	* sysdeps/pthread/pthread.h: Add barrier data types and declarations.
	* sysdeps/pthread/bits/pthreadtypes.h: Likewise.
	Patch by Kaz Kylheku <kaz@ashi.footprints.net>.

2000-06-19  H.J. Lu  <hjl@gnu.org>

	* spinlock.h (HAS_COMPARE_AND_SWAP): Defined if
	HAS_COMPARE_AND_SWAP_WITH_RELEASE_SEMANTICS is defined.
	(compare_and_swap_with_release_semantics): New. Default to
	compare_and_swap if HAS_COMPARE_AND_SWAP_WITH_RELEASE_SEMANTICS
	is not defined.

	* spinlock.c (__pthread_unlock): Call
	compare_and_swap_with_release_semantics () instead of
	compare_and_swap ().

2000-06-19  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/pthread/timer_create.c: Use _set_errno instead of assigning
	to errno directly.
	* sysdeps/pthread/timer_delete.c: Likewise.
	* sysdeps/pthread/timer_getoverr.c: Likewise.
	* sysdeps/pthread/timer_gettime.c: Likewise.
	* sysdeps/pthread/timer_settime.c: Likewise.

2000-06-13  Kaz Kylheku  <kaz@ashi.footprints.net>

	Timer nodes are now reference counted, and can be marked
	as deleted. This allows for the safe release of the global mutex
	in the middle without losing the timer being operated on.

	* sysdeps/pthread/posix-timer.h (struct timer_node):  The inuse
	member is now an enum with three values, so that an intermediate
	state can be represented (deleted but not free for reuse yet).
	New refcount member added.
	* sysdeps/pthread/timer_routines.c: Likewise.

	* sysdeps/pthread/posix-timer.h (timer_addref, timer_delref,
	timer_valid): New inline functions added.

	* sysdeps/pthread/timer_gettime.c (timer_gettime): Function