@@ -16,6 +16,7 @@
 
 #include <errno.h>
 #include <sched.h>
+#include <stdlib.h>
 #include <unistd.h>
 #include "pthread.h"
 #include "internals.h"
