@@ -22,6 +22,7 @@
 #include <errno.h>
 #include <pthread.h>
 #include <stddef.h>
+#include <string.h>
 #include <sysdep.h>
 #include <time.h>
 #include <unistd.h>
